--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20010414
+ - Sync with OpenBSD glob.c, strlcat.c and vis.c changes
+
 20010413
  - OpenBSD CVS Sync                                                           
    - markus@cvs.openbsd.org 2001/04/12 14:29:09 
