--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,7 @@
    - stevesk@cvs.openbsd.org 2001/04/14 17:04:42
      [scp.c]
      'T' handling rcp/scp sync; ok markus@
+  - Missed sshtty.[ch] in Sync.
 
 20010414
  - Sync with OpenBSD glob.c, strlcat.c and vis.c changes
