--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@
    - markus@cvs.openbsd.org 2001/04/15 08:43:47
      [dh.c sftp-glob.c sftp-glob.h sftp-int.c sshconnect2.c sshd.c]
      some unused variable and typos; from tomh@po.crl.go.jp
+ - (djm) Convert mandoc manpages to man automatically. Patch from Mark D.
+   Roth <roth+openssh@feep.net>
 
 20010415
  - OpenBSD CVS Sync
