--- a/ChangeLog
+++ b/ChangeLog
@@ -18,6 +18,7 @@
      some ClientAlive cleanup; ok markus@
  - (djm) Convert mandoc manpages to man automatically. Patch from Mark D.
    Roth <roth+openssh@feep.net>
+ - (bal) CVS ID fix up and slight manpage fix from OpenBSD tree.
 
 20010415
  - OpenBSD CVS Sync
