--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+20010417
+  - (bal) Add perl5 check for HP/UX, Removed GNUness from Makefile.in
+    and temporary commneted out catman-do: since it's broken.  Patches
+    for the first two by Lutz Jaenicke <Lutz.Jaenicke@aet.TU-Cottbus.DE>
+
 20010416
   - OpenBSD CVS Sync
    - stevesk@cvs.openbsd.org 2001/04/15 01:35:22
