- (bal) Makfile day... Cleaned up multiple mantype support (Patch by     Mark D. Roth <roth+openssh@feep.net>), and fixed PIDDIR support.

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,8 @@
      debug->debug3
   - (bal) renabled 'catman-do:' and fixed it.  So now catman pages should
     be working again.
+  - (bal) Makfile day... Cleaned up multiple mantype support (Patch by
+    Mark D. Roth <roth+openssh@feep.net>), and fixed PIDDIR support.
 
 20010417
   - (bal) Add perl5 check for HP/UX, Removed GNUness from Makefile.in
