--- a/ChangeLog
+++ b/ChangeLog
@@ -23,6 +23,8 @@
      [auth2.c]                                        
      use local variable, no function call needed.     
      (btw, hostbased works now with ssh.com >= 2.0.13)
+  - (bal) Put scp-common.h back into scp.c (it exists in the upstream
+    tree) pointed out by Tom Holroyd <tomh@po.crl.go.jp>
 
 20010418
   - OpenBSD CVS Sync                            
