--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
      [clientloop.c ssh.1]
      Split out and improve escape character documentation, mention ~R in
      ~? help text; ok markus@
+ - Update RPM spec files for CVS version.h
 
 20010420
  - OpenBSD CVS Sync                         
