- (stevesk) set the default PAM service name to __progname instead    of the hard-coded value "sshd"; from Mark D. Roth <roth@feep.net>

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,8 @@
      Split out and improve escape character documentation, mention ~R in
      ~? help text; ok markus@
  - Update RPM spec files for CVS version.h
+ - (stevesk) set the default PAM service name to __progname instead
+   of the hard-coded value "sshd"; from Mark D. Roth <roth@feep.net>
 
 20010420
  - OpenBSD CVS Sync                         
