--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,8 @@
  - (stevesk) set the default PAM service name to __progname instead
    of the hard-coded value "sshd"; from Mark D. Roth <roth@feep.net>
  - (stevesk) document PAM service name change in INSTALL
+ - tim@mindrot.org 2001/04/21 14:25:57 [Makefile.in configure.in]
+   fix perl test, fix nroff test, fix Makefile to build outside source tree
 
 20010420
  - OpenBSD CVS Sync                         
