--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
      [ssh-keygen.1 ssh.1 sshd.8]
      document hostbased and other cleanup
  - (stevesk) start_pam() doesn't use DNS now for sshd -u0.
+ - (stevesk) auth-pam.c: use PERMIT_NO_PASSWD
 
 20010422
  - OpenBSD CVS Sync
