--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@
  - (stevesk) auth-pam.c: use PERMIT_NO_PASSWD
  - (bal) sys/queue.h is bogus for NCR platform.  Patch by Daniel Carroll 
    <dan@mesastate.edu>
+ - (bal) Fixed contrib/postinstall.in.  Patch by wsanders@wsanders.net
 
 20010422
  - OpenBSD CVS Sync
