--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20010427
+ - (bal) Fixed uidswap.c so it should work on non-posix complient systems.
+   patch based on 2.5.2 version by djm.
+
 20010425
  - OpenBSD CVS Sync
    - markus@cvs.openbsd.org 2001/04/23 21:57:07
