--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 20010427
  - (bal) Fixed uidswap.c so it should work on non-posix complient systems.
    patch based on 2.5.2 version by djm.
+ - (bal) Build manpages and config files once unless changed.  Patch by
+   Carson Gaspar <carson@taltos.org>
 
 20010425
  - OpenBSD CVS Sync
