--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
    patch based on 2.5.2 version by djm.
  - (bal) Build manpages and config files once unless changed.  Patch by
    Carson Gaspar <carson@taltos.org>
+ - (bal) arpa/nameser.h does not exist on Cygwin.  Patch by Corinna 
+   Vinschen <vinschen@redhat.com>
 
 20010425
  - OpenBSD CVS Sync
