--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,8 @@
    Carson Gaspar <carson@taltos.org>
  - (bal) arpa/nameser.h does not exist on Cygwin.  Patch by Corinna 
    Vinschen <vinschen@redhat.com>
+ - (bal) Add /etc/sysconfig/sshd support to redhat's sshd.init. Patch by
+   Pekka Savola <pekkas@netcore.fi>
 
 20010425
  - OpenBSD CVS Sync
