--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,8 @@
    Vinschen <vinschen@redhat.com>
  - (bal) Add /etc/sysconfig/sshd support to redhat's sshd.init. Patch by
    Pekka Savola <pekkas@netcore.fi>
+ - (bal) Cygwin lacks setgroups() API.  Patch by Corinna Vinschen 
+   <vinschen@redhat.com>
 
 20010425
  - OpenBSD CVS Sync
