--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20010429
+ - (bal) Updated INSTALL.  PCRE moved to a new place.
+
 20010427
  - (bal) Fixed uidswap.c so it should work on non-posix complient systems.
    patch based on 2.5.2 version by djm.
