--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 20010429
  - (bal) Updated INSTALL.  PCRE moved to a new place.
+ - (djm) Release OpenSSH-2.9p1
 
 20010427
  - (bal) Fixed uidswap.c so it should work on non-posix complient systems.
