--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@
      [channels.c clientloop.c compat.c compat.h serverloop.c]
      more ssh.com-2.0.x bug-compat; from per@appgate.com
  - (tim) New version of mdoc2man.pl from Mark D. Roth <roth+openssh@feep.net>
+ - (djm) Add .cvsignore files, suggested by Wayne Davison <wayne@blorf.net>
 
 20010429
  - (bal) Updated INSTALL.  PCRE moved to a new place.
