--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
    Suggested by Jason Mader <jason@ncac.gwu.edu>
  - (bal) White Space and #ifdef sync with OpenBSD
  - (bal) Add 'seed_rng()' to ssh-add.c
+ - (bal) CVS ID updates for readpass.c, readpass.h, cli.c, and cli.h
  - OpenBSD CVS Sync
    - stevesk@cvs.openbsd.org 2001/05/05 13:42:52
      [sftp.1 ssh-add.1 ssh-keygen.1]
