--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,8 @@
    - mouring@cvs.openbsd.org 2001/05/08 19:45:25
      [misc.c misc.h scp.c sftp.c]
      Use addargs() in sftp plus some clean up of addargs().  OK Markus
+ - (bal) UseLogin patch for Solaris/UNICOS.  Patch by Wayne Davison 
+   <wayne@blorf.net>
 
 20010508
  - (bal) Fixed configure test for USE_SIA.  
