--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,8 @@
      Use addargs() in sftp plus some clean up of addargs().  OK Markus
  - (bal) UseLogin patch for Solaris/UNICOS.  Patch by Wayne Davison 
    <wayne@blorf.net>
+ - (bal) ./configure support to disable SIA on OSF1.  Patch by
+   Chris Adams <cmadams@hiwaay.net>
 
 20010508
  - (bal) Fixed configure test for USE_SIA.  
