--- a/INSTALL
+++ b/INSTALL
@@ -140,6 +140,9 @@ it if lastlog is installed in a different place.
 
 --without-lastlog will disable lastlog support entirely.
 
+--with-sia, --without-sia will enable or disable OSF1's Security 
+Integration Architecture.  The default for OSF1 machines is enable.
+
 --with-kerberos4=PATH will enable Kerberos IV support. You will need
 to have the Kerberos libraries and header files installed for this
 to work. Use the optional PATH argument to specify the root of your
