--- a/ChangeLog
+++ b/ChangeLog
@@ -22,6 +22,8 @@
    <wayne@blorf.net>
  - (bal) ./configure support to disable SIA on OSF1.  Patch by
    Chris Adams <cmadams@hiwaay.net>
+ - (bal) Updates from the Sony NEWS-OS platform by NAKAJI Hiroyuki 
+   <nakaji@tutrp.tut.ac.jp>
 
 20010508
  - (bal) Fixed configure test for USE_SIA.  
