--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20010528
+ - (tim) [conifgure.in] add setvbuf test needed for sftp-int.c
+   Patch by Corinna Vinschen <vinschen@redhat.com>
+
 20010517
  - OpenBSD CVS Sync
    - markus@cvs.openbsd.org 2001/05/12 19:53:13
