--- a/ChangeLog
+++ b/ChangeLog
@@ -77,6 +77,7 @@
    - markus@cvs.openbsd.org 2001/06/08 15:25:40
      [includes.h pathnames.h readconf.c servconf.c]
      move the path for xauth to pathnames.h
+ - (bal) configure.in fix for Tru64 (forgeting to reset $LIB)
 
 20010606
  - OpenBSD CVS Sync
