--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20010610
+ - (bal) Missed two files in major resync.  auth-bsdauth.c and auth-skey.c
+
 20010609
  - OpenBSD CVS Sync
    - markus@cvs.openbsd.org 2001/05/30 12:55:13
