--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 20010612
+ - scp.c ID update (upstream synced vfsprintf() from us)
+ - OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2001/06/10 11:29:20
      [dispatch.c]
      we support rekeying
