--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20010615
+ - (stevesk) don't set SA_RESTART and set SIGCHLD to SIG_DFL
+   around grantpt().
+
 20010614
  - OpenBSD CVS Sync
    - markus@cvs.openbsd.org 2001/06/13 09:10:31
