--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20010622
+ - (stevesk) handle systems without pw_expire and pw_change.
+
 20010621
  - OpenBSD CVS Sync
    - markus@cvs.openbsd.org 2001/06/16 08:49:38
