--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20010627
+ - (djm) Reintroduce pam_session call for non-pty sessions.
+
 20010625
  - OpenBSD CVS Sync
    - markus@cvs.openbsd.org 2001/06/21 21:08:25
