--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 20010627
  - (djm) Reintroduce pam_session call for non-pty sessions.
+ - (djm) Remove redundant and incorrect test for max auth attempts in 
+   PAM kbdint code. Based on fix from Matthew Melvin 
+  <matthewm@webcentral.com.au>
 
 20010625
  - OpenBSD CVS Sync
