--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
  - (djm) Remove redundant and incorrect test for max auth attempts in 
    PAM kbdint code. Based on fix from Matthew Melvin 
   <matthewm@webcentral.com.au>
+ - (djm) Rename sysconfdir/primes => sysconfdir/moduli
 
 20010625
  - OpenBSD CVS Sync
