--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 20010629
  - (bal) Removed net_aton() since we don't use it any more
+ - (bal) Fixed _DISABLE_VPOSIX in readpassphrase.c.
 
 20010628
  - (djm) Sync openbsd-compat with -current libc
