--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
  - (bal) Updated zlib's home.  Thanks to David Howe <DaveHowe@gmx.co.uk>.
  - (stevesk) remove _REENTRANT #define
  - (stevesk) session.c: use u_int for envsize
+ - (stevesk) remove cli.[ch]
 
 20010628
  - (djm) Sync openbsd-compat with -current libc
