--- a/ChangeLog
+++ b/ChangeLog
@@ -131,6 +131,7 @@
      wait for children (i.e. dying sessions), send exit messages,
      cleanup all channels.
  - (bal) forget a few new files in sync up.
+ - (bal) Makefile fix up requires scard.c
 
 20010629
  - (bal) Removed net_aton() since we don't use it any more
