--- a/ChangeLog
+++ b/ChangeLog
@@ -132,6 +132,7 @@
      cleanup all channels.
  - (bal) forget a few new files in sync up.
  - (bal) Makefile fix up requires scard.c
+ - (stevesk) sync misc.h
 
 20010629
  - (bal) Removed net_aton() since we don't use it any more
