- (stevesk) more sync for session.c

--- a/ChangeLog
+++ b/ChangeLog
@@ -133,6 +133,7 @@
  - (bal) forget a few new files in sync up.
  - (bal) Makefile fix up requires scard.c
  - (stevesk) sync misc.h
+ - (stevesk) more sync for session.c
 
 20010629
  - (bal) Removed net_aton() since we don't use it any more
