--- a/ChangeLog
+++ b/ChangeLog
@@ -136,6 +136,11 @@
  - (stevesk) more sync for session.c
  - (stevesk) sync servconf.h (comments)
  - (tim) [contrib/caldera/openssh.spec] sync with Caldera
+ - (tim) [openbsd-compat/dirname.h] Remove ^M causing some compilers to
+	 issue warning (line 1: tokens ignored at end of directive line)
+ - (tim) [sshconnect1.c] give the compiler something to do for success:
+	 if KRB5 and AFS are not defined
+	 (ERROR: "sshconnect1.c", line 1274: Syntax error before or at: })
 
 20010629
  - (bal) Removed net_aton() since we don't use it any more
