--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20010711
+ - (djm) dirname(3) may modify its argument on glibc and other systems. 
+   Patch from markus@, spotted by Tom Holroyd <tomh@po.crl.go.jp>
+
 20010704
  - OpenBSD CVS Sync
    - markus@cvs.openbsd.org 2001/06/25 08:25:41
