--- a/ChangeLog
+++ b/ChangeLog
@@ -47,6 +47,8 @@
      [auth.c]
      no need to call dirname(pw->pw_dir).
      note that dirname(3) modifies its argument on some systems.
+ - (djm) Reorder Makefile.in so clean targets work a little better when
+   run directly from Makefile.in
 
 20010711
  - (djm) dirname(3) may modify its argument on glibc and other systems. 
