--- a/ChangeLog
+++ b/ChangeLog
@@ -49,6 +49,7 @@
      note that dirname(3) modifies its argument on some systems.
  - (djm) Reorder Makefile.in so clean targets work a little better when
    run directly from Makefile.in
+ - (djm) Pull in getopt(3) from OpenBSD libc for the optreset extension.
 
 20010711
  - (djm) dirname(3) may modify its argument on glibc and other systems. 
