--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 20010714
  - (stevesk) change getopt() declaration
+ - (stevesk) configure.in: use ll suffix for long long constant
+   in snprintf() test
 
 20010713
  - (djm) Enable /etc/nologin check on PAM systems, as some lack the 
