- (bal) Set "BROKEN_GETADDRINFO" for darwin platform.  Reported by     Josh Larios <jdlarios@cac.washington.edu>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20010715
+ - (bal) Set "BROKEN_GETADDRINFO" for darwin platform.  Reported by
+   Josh Larios <jdlarios@cac.washington.edu>
+   
 20010714
  - (stevesk) change getopt() declaration
  - (stevesk) configure.in: use ll suffix for long long constant
