- (bal) Allow sshd to switch user context without password for Cygwin.          Patch by Corinna Vinschen <vinschen@redhat.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -20,6 +20,8 @@
      keep track of both maxfd and the size of the malloc'ed fdsets.
      update maxfd if maxfd gets closed.
  - (bal) Cleaned up trailing spaces in ChangeLog.
+ - (bal) Allow sshd to switch user context without password for Cygwin.
+         Patch by Corinna Vinschen <vinschen@redhat.com>
 
 20010715
  - (bal) Set "BROKEN_GETADDRINFO" for darwin platform.  Reported by
