--- a/ChangeLog
+++ b/ChangeLog
@@ -23,7 +23,7 @@
  - (bal) Allow sshd to switch user context without password for Cygwin.
          Patch by Corinna Vinschen <vinschen@redhat.com>
  - (bal) Updated cygwin README and ssh-host-config.  Patch by
- 	 Patch by Corinna Vinschen <vinschen@redhat.com>
+ 	 Corinna Vinschen <vinschen@redhat.com>
 
 20010715
  - (bal) Set "BROKEN_GETADDRINFO" for darwin platform.  Reported by
