--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20010719
+ - (tim) [configure.in] put inet_aton back in AC_CHECK_FUNCS.
+	 report from Mark Miller <markm@swoon.net>
+
 20010718
  - OpenBSD CVS Sync
    - stevesk@cvs.openbsd.org 2001/07/14 15:10:17
