- (bal) Starting the Unicossmk merger.  File merged TODO, configure.in,          myproposal.h, ssh_prng_cmds.in, and openbsd-compat/Makefile.in. 	 Added openbsd-compat/bsd-cray.c.  Rest will be merged after 	 approval.  Selective patches from William L. Jones 	 <jones@mail.utexas.edu>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+20010722
+ - (bal) Starting the Unicossmk merger.  File merged TODO, configure.in,
+ 	 myproposal.h, ssh_prng_cmds.in, and openbsd-compat/Makefile.in.
+	 Added openbsd-compat/bsd-cray.c.  Rest will be merged after
+	 approval.  Selective patches from William L. Jones 
+	 <jones@mail.utexas.edu> 
+
 20010719
  - (tim) [configure.in] put inet_aton back in AC_CHECK_FUNCS.
 	 report from Mark Miller <markm@swoon.net>
