- (bal) Added 'install-nokeys' to Makefile to assist package builders.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20010725
+ - (bal) Added 'install-nokeys' to Makefile to assist package builders.
+
 20010724
  - (bal) 4711 not 04711 for ssh binary.
 
