--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20010726
+ - (stevesk) use mysignal() in protocol 1 loop now that the SIGCHLD
+   handler has converged.
+
 20010725
  - (bal) Added 'install-nokeys' to Makefile to assist package builders.
 
