--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20010814
+ - (stevesk) sshpty.c, cray.[ch]: whitespace, formatting and cleanup
+   for some #ifdef _CRAY code; ok wendyp@cray.com
+
 20010812
  - (djm) Fix detection of long long int support. Based on patch from 
    Michael Stone <mstone@cs.loyola.edu>. ok stevesk, tim
