--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 20010814
  - (stevesk) sshpty.c, cray.[ch]: whitespace, formatting and cleanup
    for some #ifdef _CRAY code; ok wendyp@cray.com
+ - (stevesk) sshpty.c: return 0 on error in cray pty code;
+   ok wendyp@cray.com
 
 20010812
  - (djm) Fix detection of long long int support. Based on patch from 
