--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
    for some #ifdef _CRAY code; ok wendyp@cray.com
  - (stevesk) sshpty.c: return 0 on error in cray pty code;
    ok wendyp@cray.com
+ - (stevesk) bsd-cray.c: utmp strings are not C strings
 
 20010812
  - (djm) Fix detection of long long int support. Based on patch from 
