--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
  - (stevesk) sshpty.c: return 0 on error in cray pty code;
    ok wendyp@cray.com
  - (stevesk) bsd-cray.c: utmp strings are not C strings
+ - (stevesk) bsd-cray.c: more cleanup; ok wendyp@cray.com
 
 20010812
  - (djm) Fix detection of long long int support. Based on patch from 
