--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+20010913
+ - (bal) OpenBSD CVS Sync
+   - markus@cvs.openbsd.org 2001/08/23 11:31:59
+     [cipher.c cipher.h]
+     switch to the optimised AES reference code from
+     http://www.esat.kuleuven.ac.be/~rijmen/rijndael/rijndael-fst-3.0.zip
+
 20010912
  - (bal) OpenBSD CVS Sync
    - jakob@cvs.openbsd.org 2001/08/16 19:18:34
