--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+20010914
+ - (bal) OpenBSD CVS Sync
+   - markus@cvs.openbsd.org 2001/09/13
+     [rijndael.c rijndael.h]
+     missing $OpenBSD
+    
 20010913
  - (bal) OpenBSD CVS Sync
    - markus@cvs.openbsd.org 2001/08/23 11:31:59
