--- a/ChangeLog
+++ b/ChangeLog
@@ -3,7 +3,10 @@
    - markus@cvs.openbsd.org 2001/09/13
      [rijndael.c rijndael.h]
      missing $OpenBSD
-    
+   - markus@cvs.openbsd.org 2001/09/14
+     [session.c]
+     command=xxx overwrites subsystems, too
+
 20010913
  - (bal) OpenBSD CVS Sync
    - markus@cvs.openbsd.org 2001/08/23 11:31:59
