--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 20010915
  - (djm) Make do_pre_login static to avoid prototype #ifdef hell
  - (djm) Sync scard/ stuff
+ - (djm) Redhat spec file cleanups from Pekka Savola <pekkas@netcore.fi> and
+   Redhat
 
 20010914
  - (bal) OpenBSD CVS Sync
