I really should commit these in sync with the actual changes

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,8 @@
  - (djm) Clear supplemental groups at sshd start to prevent them from 
    being propogated to random PAM modules. Based on patch from Redhat via
    Pekka Savola <pekkas@netcore.fi>
+ - (djm) Make sure rijndael.c picks config.h
+ - (djm) Ensure that u_char gets defined
 
 20010914
  - (bal) OpenBSD CVS Sync
