- (tim) [includes.h openbsd-compat/getopt.c openbsd-compat/getopt.h] 	 rename getopt() to BSDgetopt() to keep form conflicting with 	 system getopt(). 	 [Makefile.in configure.in] disable filepriv until I can add 	 missing procpriv calls.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 20010917
  - (djm) x11-ssh-askpass-1.2.4 in RPM spec, revert workarounds
+ - (tim) [includes.h openbsd-compat/getopt.c openbsd-compat/getopt.h]
+	 rename getopt() to BSDgetopt() to keep form conflicting with
+	 system getopt().
+	 [Makefile.in configure.in] disable filepriv until I can add
+	 missing procpriv calls.
 
 20010916
  - (djm) Workaround XFree breakage in RPM spec file
