--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 20010918
  - (djm) Configure support for smartcards
+ - (djm) Revert setgroups call, it causes problems on OS-X
 
 20010917
  - (djm) x11-ssh-askpass-1.2.4 in RPM spec, revert workarounds
