- (djm) Avoid warning on BSDgetopt

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 20010918
- - (djm) Configure support for smartcards
+ - (djm) Configure support for smartcards. Based on Ben's work.
  - (djm) Revert setgroups call, it causes problems on OS-X
+ - (djm) Avoid warning on BSDgetopt
 
 20010917
  - (djm) x11-ssh-askpass-1.2.4 in RPM spec, revert workarounds
