--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@
    on Ben's work
  - (djm) Specify --datadir in RPM spec files so smartcard applet gets
     put somewhere sane. Add Ssh.bin to manifest.
+ - (djm) Make smartcard support conditional in Redhat RPM spec
 
 20010917
  - (djm) x11-ssh-askpass-1.2.4 in RPM spec, revert workarounds
