--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,9 @@
     put somewhere sane. Add Ssh.bin to manifest.
  - (djm) Make smartcard support conditional in Redhat RPM spec
  - (bal) LICENCE update.  Has not been done in a while.
+ - (stevesk) nchan.c: we use X/Open Sockets on HP-UX now so shutdown(2)
+   returns ENOTCONN vs. EINVAL for socket not connected; remove EINVAL
+   check. ok Lutz Jaenicke
  - OpenBSD CVS Sync
    - stevesk@cvs.openbsd.org 2001/09/17 17:57:57
      [scp.1 scp.c sftp.1 sftp.c]
