--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20010920
+ - (tim) [scard/Makefile.in] Don't strip the Java binary
+
 20010919
  - (bal) OpenBSD Sync
    - markus@cvs.openbsd.org 2001/09/19 10:08:51
