- (stevesk) sun_len, SUN_LEN() configure stuff no longer required

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 20010920
  - (tim) [scard/Makefile.in] Don't strip the Java binary
+ - (stevesk) sun_len, SUN_LEN() configure stuff no longer required
 
 20010919
  - (bal) OpenBSD Sync
