--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+20010923
+ - (bal) OpenBSD CVS Sync
+   - markus@cvs.openbsd.org 2001/09/23 11:09:13
+     [authfile.c]
+     relax permission check for private key files.
+
 20010920
  - (tim) [scard/Makefile.in] Don't strip the Java binary
  - (stevesk) sun_len, SUN_LEN() configure stuff no longer required
