- (djm) Add AC_SYS_LARGEFILE configure test

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 20010925
  - (djm) Pull in auth-krb5.c from OpenBSD CVS. NB. it is not currently used.
  - (djm) Sync $sysconfdir/moduli
+ - (djm) Add AC_SYS_LARGEFILE configure test
 
 20010923
  - (bal) updated ssh.c to mirror minor getopts 'extern int' formating done
