--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20010927
+ - (stevesk) session.c: declare do_pre_login() before use
+   wayned@users.sourceforge.net
+
 20010925
  - (djm) Pull in auth-krb5.c from OpenBSD CVS. NB. it is not currently used.
  - (djm) Sync $sysconfdir/moduli
