--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20010929
+ - (bal) move reading 'config.h' up higher.  Patch by albert chin
+   <china@thewrittenword.com)
+
 20010928
  - (djm) OpenBSD CVS sync:
    - djm@cvs.openbsd.org 2001/09/28 09:49:31
