--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20011001
+ - (stevesk) loginrec.c: fix type conversion problems exposed when using
+   64-bit off_t.
+	
 20010929
  - (bal) move reading 'config.h' up higher.  Patch by albert chin
    <china@thewrittenword.com)
