- (bal) nchan2.ms resync.  BSD License applied.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20011004
+ - (bal) nchan2.ms resync.  BSD License applied.
+
 20011003
  - (bal) CVS ID fix up in version.h
  - (bal) OpenBSD CVS Sync:
