--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20011007
+ - (bal) ssh-copy-id corrected permissions for .ssh/ and authorized_keys.
+   Prompted by Matthew Vernon <matthew@sel.cam.ac.uk> 
+
 20011005
  - (bal) AES works under Cray, no more hack. 
 
