- (bal) removed two unsed headers in openbsd-compat/bsd-misc.c

--- a/ChangeLog
+++ b/ChangeLog
@@ -48,6 +48,7 @@
      [channels.c channels.h serverloop.c session.c session.h]
      simplify session close: no more delayed session_close, no more 
      blocking wait() calls.
+ - (bal) removed two unsed headers in openbsd-compat/bsd-misc.c 
 
 20011007
  - (bal) ssh-copy-id corrected permissions for .ssh/ and authorized_keys.
