--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,7 @@
    - markus@cvs.openbsd.org 2001/10/11 15:24:00
      [clientloop.c]
      clear select masks if we return before calling select().
+ - (djm) "make veryclean" fix from Tom Holroyd <tomh@po.crl.go.jp>
 
 20011010
  - (djm) OpenBSD CVS Sync
