--- a/ChangeLog
+++ b/ChangeLog
@@ -16,6 +16,7 @@
      [clientloop.c]
      clear select masks if we return before calling select().
  - (djm) "make veryclean" fix from Tom Holroyd <tomh@po.crl.go.jp>
+ - (djm) Clean some autoconf-2.52 junk when doing "make distclean"
 
 20011010
  - (djm) OpenBSD CVS Sync
