--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20011022
+ - (djm) Fix fd leak in loginrec.c (ro fd to lastlog was left open).
+   Report from Michal Zalewski <lcamtuf@coredump.cx>
+
 20011021
  - (tim) [configure.in] Clean up library testing. Add optional PATH to
 	 --with-pcre, --with-zlib, and --with-tcp-wrappers. Based on
