--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 20011023
  - (bal) Updated version to 3.0p1 in preparing for release.
+ - (bal) Added 'PAM_TTY_KLUDGE' to Solaris platform.
 
 20011022
  - (djm) Fix fd leak in loginrec.c (ro fd to lastlog was left open).
