--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20011024
+ - (bal) Should be 3.0p1 not 3.0p2.  Corrected version.h already.
+
 20011023
  - (bal) Updated version to 3.0p1 in preparing for release.
  - (bal) Added 'PAM_TTY_KLUDGE' to Solaris platform.
