--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20011025
+ - (bal) Use VDISABLE if _POSIX_VDISABLE is set in readpassphrase.c.  Patch
+   by todd@
+
 20011024
  - (bal) Should be 3.0p1 not 3.0p2.  Corrected version.h already.
  - (tim) configure.in -> configure.ac
