--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 20011025
  - (bal) Use VDISABLE if _POSIX_VDISABLE is set in readpassphrase.c.  Patch
    by todd@
+ - (tim) [configure.ac] Give path given in --with-xxx= for pcre,zlib, and
+	 tcp-wrappers precedence over system libraries and includes.
+	 Report from Dave Dykstra <dwd@bell-labs.com>
 
 20011024
  - (bal) Should be 3.0p1 not 3.0p2.  Corrected version.h already.
