--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20011026
+ - (bal) Set the correct current time in login_utmp_only().  Patch by
+   Wayne Davison <wayned@users.sourceforge.net>
+
 20011025
  - (bal) Use VDISABLE if _POSIX_VDISABLE is set in readpassphrase.c.  Patch
    by todd@
