Fix install: when building outside of source tree and using --src=/full_path/to/openssh Patch by Mark D. Baushke <mdb@juniper.net>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 20011026
  - (bal) Set the correct current time in login_utmp_only().  Patch by
    Wayne Davison <wayned@users.sourceforge.net>
+ - (tim) [scard/Makefile.in] Fix install: when building outside of source
+	 tree and using --src=/full_path/to/openssh
+	 Patch by Mark D. Baushke <mdb@juniper.net>
 
 20011025
  - (bal) Use VDISABLE if _POSIX_VDISABLE is set in readpassphrase.c.  Patch
