--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20011028
+ - (djm) Avoid bug in Solaris PAM libs
+
 20011027
  - (tim) [configure.ac] Fixes for ReliantUNIX (don't use libucb)
    Patch by Robert Dahlem <Robert.Dahlem@siemens.com>
