--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 20011028
  - (djm) Avoid bug in Solaris PAM libs
+ - (djm) Disconnect if no tty and PAM reports password expired
 
 20011027
  - (tim) [configure.ac] Fixes for ReliantUNIX (don't use libucb)
