--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 20011028
  - (djm) Avoid bug in Solaris PAM libs
  - (djm) Disconnect if no tty and PAM reports password expired
+ - (djm) Fix for PAM password changes being echoed (from stevesk)
 
 20011027
  - (tim) [configure.ac] Fixes for ReliantUNIX (don't use libucb)
