--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
  - (djm) Avoid bug in Solaris PAM libs
  - (djm) Disconnect if no tty and PAM reports password expired
  - (djm) Fix for PAM password changes being echoed (from stevesk)
+ - (stevesk) Fix compile problem with PAM password change fix
 
 20011027
  - (tim) [configure.ac] Fixes for ReliantUNIX (don't use libucb)
