--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20011029
+ - (tim) [TODO defines.h loginrec.c] Change the references to configure.in
+   to configure.ac
+
 20011028
  - (djm) Avoid bug in Solaris PAM libs
  - (djm) Disconnect if no tty and PAM reports password expired
