--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20011030
+ - (djm) Redhat RPM spec: remove noreplace from config files, allow IPv6 
+   by default (can force IPv4 using --define "noipv6 1")
+
 20011029
  - (tim) [TODO defines.h loginrec.c] Change the references to configure.in
    to configure.ac
