- (djm) Fix IPv4 default in ssh-keyscan. Spotted by Dan Astoorian    <djast@cs.toronto.edu> Fix from markus@

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20011115
+ - (djm) Fix IPv4 default in ssh-keyscan. Spotted by Dan Astoorian 
+   <djast@cs.toronto.edu> Fix from markus@
+
 20011113
  - (djm) Fix early (and double) free of remote user when using Kerberos. 
    Patch from Simon Wilkinson <simon@sxw.org.uk>
