--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+20011126
+ - (tim) [contrib/cygwin/README, openbsd-compat/bsd-cygwin_util.c,
+   openbsd-compat/bsd-cygwin_util.h, openbsd-compat/daemon.c]
+   Allow SSHD to install as service under WIndows 9x/Me
+   [configure.ac] Fix to allow linking against PCRE on Cygwin
+   Patches by Corinna Vinschen <vinschen@redhat.com>
+
 20011115
  - (djm) Fix IPv4 default in ssh-keyscan. Spotted by Dan Astoorian 
    <djast@cs.toronto.edu> Fix from markus@
