--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20011223
+ - (bal) Removed contrib/chroot.diff and noted in contrib/README that it
+   was not being maintained.
+
 20011222
  - (djm) Ignore fix & patchlevel in OpenSSL version check. Patch from 
    solar@openwall.com
