--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 - A Japanese translation of this document and of the OpenSSH FAQ is 
 - available at http://www.unixuser.org/~haruyama/security/openssh/index.html
-- Thanks to HARUYAMA Seigo <haruyama@klab.org>
+- Thanks to HARUYAMA Seigo <haruyama@unixuser.org>
 
 This is the port of OpenBSD's excellent OpenSSH[0] to Linux and other
 Unices.
