--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20011225
+ - (stevesk) [Makefile.in ssh-rand-helper.c]
+   portable lib and __progname support for ssh-rand-helper; ok djm@
+
 20011223
  - (bal) Removed contrib/chroot.diff and noted in contrib/README that it
    was not being maintained.
